# ANAMNESIS

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  HONEST_CLAIMS.md  HONEST_CLAIMS.sig  HONEST_CLAIMS.sig.json  LICENSE  LICENSE-CHANGE-2026-05-22.md  LICENSE.all-rights-reserved.backup  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agents/: honesty_auditor.py  sign_claims.py  test_honesty_auditor.py
anamnesis-py/: pyproject.toml
anamnesis-py/src/anamnesis/: __init__.py  capture.py  cli.py  compose.py  conformal.py  distill.py  receipts.py  retrieve.py  savings.py  storage.py
anamnesis-py/src/anamnesis/keystore/: __init__.py  keystore.py
anamnesis-py/tests/: test_anthropic_distiller.py  test_capture.py  test_capture_fuzz.py  test_capture_more_providers.py  test_capture_robustness.py  test_cli.py  test_cli_subprocess.py  test_compose_edges.py  test_concurrency.py  test_conditional_conformal.py  test_conformal.py  test_crypto_attacks.py  test_determinism.py  test_embedders.py  test_encoding_attacks.py  test_index_rebuild.py  test_keystore.py  test_math_edges.py  test_nan_infinity.py  test_pathological.py  test_properties.py  test_receipt_chain.py  test_receipt_size.py  test_receipts.py  test_retrieve_compose.py  test_savings.py  test_state_machine.py  test_storage_corruption.py  test_storage_cross_instance.py  test_storage_distill.py  test_time_edges.py
anamnesis-server/: pyproject.toml
anamnesis-server/src/anamnesis_server/: __init__.py  eu_compliance.py  main.py  models.py
anamnesis-server/tests/: test_adversarial.py  test_api.py  test_http_middleware.py  test_idempotency_replay.py  test_memory_smoke.py  test_openapi.py
anamnesis-ts/: README.md  package-lock.json  package.json  tsconfig.json
anamnesis-ts/src/: client.ts  index.ts  receipts.ts  signer.ts  types.ts
anamnesis-ts/test/: client.test.ts  receipts.test.ts  signer.test.ts
anamnesis-web/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
anamnesis-web/src/components/: StatCard.astro
anamnesis-web/src/layouts/: Base.astro
anamnesis-web/src/pages/: architecture.astro  compliance.astro  index.astro  receipts.astro  tenants.astro
benchmarks/: bench_100k.py  bench_10k.py  coverage_empirical.py  cross_lang_receipts.py  multi_tenant_load.py  persistence_test.py  stress_1000_tenants.py
docs/: ARCHITECTURE.md  COMPETITIVE_LANDSCAPE.md  CONFORMAL_THEORY.md  DESIGN_PARTNER_OUTREACH.md  EU_AI_ACT_MAPPING.md  PRICING.md
examples/: 01_basic_capture.py  02_reuse_demo.py  03_compliance_audit.py  04_savings_demo.py
tools/hooks/: verify_honest_claims.py
