[project]
name = "anamnesis"
version = "0.1.0"
description = "SDK for capturing, distilling, and reusing reasoning-model thinking-tokens with conformal guarantees and signed receipts"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{name = "Ozan Küsmez", email = "ozanks20@gmail.com"}]
license = "Apache-2.0"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "pynacl>=1.5",
    "numpy>=1.26",
    # chromadb removed 2026-05-22: CVE-2026-45829 RCE in 1.5.9 (no patch).
    # The TraceStore in src/anamnesis/storage.py uses sqlite + numpy in-process,
    # so chromadb was a dead carry-over dep with zero source imports.
    # If a server-mode vector backend is reintroduced, prefer qdrant-client
    # (Apache-2.0) or lancedb (Apache-2.0) under a feature-flag, not the original
    # chromadb. See docs/security/2026-05-22-chromadb-cve-mitigation-applied.md
    # in the TRUST-OS repo for the full audit trail.
    "anthropic>=0.40",
    "openai>=1.50",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "openapi-spec-validator>=0.7",
    "psutil>=5.9",
    "ruff>=0.5",
    "mypy>=1.10",
]
embed = [
    "fastembed>=0.3",
]

[project.scripts]
anamnesis = "anamnesis.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anamnesis"]
