[project]
name = "anamnesis-server"
version = "0.1.0"
description = "FastAPI backend for ANAMNESIS reasoning-trace storage, conformal calibration, and receipts"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{name = "Ozan Küsmez", email = "ozanks20@gmail.com"}]
license = {text = "Proprietary"}
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pynacl>=1.5",
    "numpy>=1.26",
    "chromadb>=0.5",
    "anamnesis",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.uv.sources]
anamnesis = {workspace = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anamnesis_server"]
