[project]
name = "anamnesis-server"
version = "0.1.0"
description = "FastAPI backend for ANAMNESIS reasoning-trace storage, conformal calibration, and receipts"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{name = "Ozan Küsmez", email = "ozanks20@gmail.com"}]
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    # 2026-06-02 live-OSV-audit: starlette>=1.0.1 patches PYSEC-2026-161
    # (Host-header path-injection -> potential auth bypass). FastAPI pulls it
    # transitively; this floor forces the patched release.
    "starlette>=1.0.1",
    "uvicorn[standard]>=0.30",
    # 2026-05-22 floor-harmonization: pydantic bumped 2.7 -> 2.9 (cross-repo
    # harmonized floor; FastAPI 0.135.x lower bound).
    "pydantic>=2.9",
    "pynacl>=1.5",
    "numpy>=1.26",
    # chromadb removed 2026-05-22: CVE-2026-45829 RCE in 1.5.9 (no patch).
    # The server (src/anamnesis_server/main.py) does not import chromadb;
    # it shells through the anamnesis TraceStore which uses sqlite + numpy.
    # If a remote vector backend is needed later, prefer qdrant-client or
    # lancedb behind an explicit ENABLE_VECTOR_STORE feature flag.
    "anamnesis",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.uv.sources]
anamnesis = {workspace = true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anamnesis_server"]
